force-app/main/default/objects/CTP_CaseRecordTypeEntitlementMapping__c/CTP_CaseRecordTypeEntitlementMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to Map Case Record Type and Entitlement process. Modified as part of DCR-3341 Rel1.5 to add record id for Case Entitlement process for Claim Application</description>
    <label>CTP_CaseRecordTypeEntitlementMapping</label>
</CustomObject>