force-app/main/default/objects/CTP_CaseRecordTypeEntitlementMapping__c/fields/CTP_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CTP_Case_Record_Type__c</fullName>
    <description>Field to store case record type</description>
    <label>CTP Case Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>