force-app/main/default/objects/CTP_CaseRecordTypeEntitlementMapping__c/fields/CTP_Entitlement_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>CTP_Entitlement_Process_Name__c</fullName>
    <description>Name of entitlement process</description>
    <label>CTP Entitlement Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>